k8s/deny-all-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-network-policy
  namespace: chat-app-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
